<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/samplelogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edt_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintphone"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintpwd"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="10dp"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/txt_forgot"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotpwd"
            android:textColor="@color/white"/>
    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
        <Spinner
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/language_spin"
            android:entries="@array/entry"
            android:background="@color/white"
            ></Spinner>
         <Button
             android:id="@+id/chagelan_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/changelanguage"
             android:textAllCaps="false"
             />
     </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/btnlogin"
            android:textAllCaps="false"/>
        <!--<com.nihaskalam.progressbuttonlibrary.CircularProgressButton-->

            <!--android:id="@+id/circularButton3"-->
            <!--android:layout_width="196dp"-->
            <!--android:layout_height="64dp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:onClick="onClickThirdBtn"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:textSize="22sp"-->
            <!--app:pb_colorIndicator="@color/colorAccent"-->
            <!--app:pb_cornerRadius="48dp"-->
            <!--app:pb_iconCancel="@drawable/ic_action_cross"-->
            <!--app:pb_iconComplete="@drawable/ic_action_accept"-->
            <!--app:pb_iconError="@drawable/ic_action_cancel"-->
            <!--app:pb_selectorCancel="@color/pb_cancel_state_selector"-->
            <!--app:pb_selectorComplete="@color/complete_state_selector"-->
            <!--app:pb_selectorError="@color/error_state_selector"-->
            <!--app:pb_selectorIdle="@color/idle_state_selector"-->
            <!--app:pb_textColorAfterClick="@color/colorWhite"-->
            <!--app:pb_textIdle="@string/submit"-->
            <!--app:pb_colorCancelText="@color/pb_orange"-->
            <!--app:pb_colorErrorText="@color/pb_blue"-->
            <!--app:pb_colorCompleteText="@color/pb_orange"-->
            <!--tools:ignore="OnClick" />-->
    </LinearLayout>
</LinearLayout>
